# Aerial-Robotics

./: README.md
apriltag_detect/: CMakeLists.txt  package.xml
apriltag_detect/config/: settings.yaml
apriltag_detect/include/: TagDetector.h
apriltag_detect/include/apriltag_detect/: TagDetector.h
apriltag_detect/launch/: apriltag_detect.launch
apriltag_detect/msg/: error.msg  graphing.msg
apriltag_detect/rviz/: detector.rviz
apriltag_detect/scripts/: graph.py  vicon.py
apriltag_detect/src/: TagDetector.cpp  demo.cpp  tag_detection_node.cpp
apriltag_ros/apriltag_ros/config/: settings.yaml  tags.yaml
apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
apriltag_ros/config/: settings.yaml
apriltag_ros/launch/: record.launch
